# log-ingestion-system

./: .gitignore  main.py  pyproject.toml  worker.py
